fix gtk3 scrollbar hover and active

--- a/Zen-griza/gtk-3.0/gtk-widgets.css
+++ b/Zen-griza/gtk-3.0/gtk-widgets.css
@@ -488,7 +488,15 @@ GtkScale.vertical.trough {
 }
 
 .scrollbar.button:hover {
-    background-color: shade(@bg_color, 1.1);
+    background-image: none;
+    background-color: @bg_hover;
+    border-style: solid;
+}
+
+.scrollbar.button:active {
+    background-image: none;
+    background-color: @bg_active;
+    border-style: solid;
 }
 
 .scrollbar.button:selected {
